Upated relationship between order and waiter